--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.17", features = ["derive"] }
+log = { version = "0.4.17" }
+env_logger = { version = "0.9.0" }
+clap = { version = "3.2.17", features = ["derive", "env"] }
 rustls = { version = "0.20.6" }
 rustls-pemfile = { version = "1.0.1" }
 tokio = { version = "1.20.1", features = ["full"] }
